<resources>
    <string name="app_name">Manages Extinguisher</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="about">About</string>
    <string name="settings">settings</string>
    <string name="manageEx">Manages Extinguisher</string>
    <string name="edificios">Edificios</string>
    <string name="fragmentEdificios">FragmentEdificios</string>
    <string name="building_Creator_button">Building Creator</string>
    <string name="submit">submit</string>
    <string name="Building_results">Building Results</string>
    <string name="action_Rename">Rename</string>
    <string name="action_Delete">Delete</string>
    <string name="action_info">Info</string>
    <string name="action_modify">Modify</string>
    <string name="ext_n">Extinguisher number</string>
    <string name="cancel">Cancel</string>
    <string name="ext_sit">Extinguisher Situation</string>
    <string name="ext_pow">Extinguisher Powder</string>
    <string name="ext_trade">Extinguisher TradeMark</string>
    <string name="ext_model">Extinguisher Model</string>
    <string name="ext_desp_loc">Extinguisher Description Location</string>
    <string name="ext_weight">Extinguisher Weight</string>
    <string name="flask_n">Flask Number</string>
    <string name="flask_sit">Flask Situation</string>
    <string name="flask_pow">Flask Powder</string>
    <string name="flask_trade">Flask TradeMark</string>
    <string name="flask_model">Flask Model</string>
    <string name="flask_desLoc">Flask Description Location</string>
    <string name="flask_emptyW">Flask Empty Weight</string>
    <string name="flask_totalW">Flask Total Weight</string>
    <string name="Name_Building">Name Building</string>
    <string name="Name_Floor">Name Floor</string>
    <string name="Number_Floor">Number floor</string>
    <string name="nextinguisher">Number Extinguisher</string>
    <string name="ext_description">Description</string>
    <string name="Weight">Weight: </string>
    <string name="Model">Model: </string>
    <string name="FactoryDate">Factory Date</string>
    <string name="exeDate">20/01/2000</string>
    <string name="LastRevision">Last Revision</string>
    <string name="NextRevision">Next Revision</string>
    <string name="emptyWeight">Empty Weight (grams)</string>
    <string name="contentWeight">Content Weight: </string>
    <string name="kg">Kg</string>
    <string name="grams">grams</string>
    <string name="Building">Building</string>
    <string name="Buildings">Buildings</string>
    <string name="factorydate">Factory Date:</string>
    <string name="nextrevision">Next Revision:</string>
    <string name="contentWeightKg">Content Weight (Kg):</string>
    <string name="contentWeightGr">Content Weight (gr):</string>
    <string name="extinguisher_trademark">Extinguisher TradeMark</string>
    <string name="ModoSinConexion">Offline mode</string>
    <string name="Login">Login</string>
    <string name="logout_button_text">Logout</string>

    <string name="login_button_text">Login</string>
    <string name="login_unsuccessful_msg">Login unsuccessful</string>
    <string name="welcome_message">It\'s currently %1$s.</string>
    <string name="welcome_message_authed">Hi %1$s! Did you know that %2$s.</string>
    <string name="login_prompt">Login to set customizations!</string>
    <string name="login_btn">Login</string>
    <string name="settings_btn">Settings</string>
    <string name="settings_fact_type_title">Fun Fact Type</string>

    <string name="fact_type_android">Android</string>
    <string name="fact_type_california">California</string>

    <!--Shared Preference Keys -->
    <string name="preference_fact_type_key">fact_type_pref</string>

    <string-array name="content_weight">
        <item>5</item>
        <item>6</item>
        <item>9</item>
        <item>10</item>
        <item>12</item>
        <item>25</item>
        <item>50</item>
    </string-array>

    <string-array name="model_extinguisher">
        <item>Agua pulverizada</item>
        <item>Agua desmineralizada</item>
        <item>Agua y espuma (AFFF)</item>
        <item>Dióxido de carbono (CO2)</item>
        <item>Polvo químico universal – ABC</item>
        <item>Polvo químico seco – BC</item>
        <item>Polvo químico – D</item>
    </string-array>
</resources>

