<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent" android:layout_width="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <EditText
                android:id="@+id/editTextModifynFlaskDia"
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:hint="@string/flask_n" />

            <EditText
                android:id="@+id/editTextModifyFlaskSituationDia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:hint="@string/flask_sit" />

            <EditText
                android:id="@+id/editTextModifyFlaskPowderDia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:hint="@string/flask_pow" />

            <EditText
                android:id="@+id/editTextModifyFlaskTradeMarkDia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:hint="@string/flask_trade" />

            <EditText
                android:id="@+id/editTextModifyFlaskModelDia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:hint="@string/flask_model" />

            <EditText
                android:id="@+id/editTextModifyFlaskDescriptionLocationDia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:hint="@string/flask_desLoc" />

            <EditText
                android:id="@+id/editTextModifyFlaskEmptyWeightDia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="textPersonName"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:hint="@string/flask_emptyW" />

            <EditText
                android:id="@+id/editTextModifyFlaskTotalWeightDia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/flask_totalW"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonCancelDialogModifyFlask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/buttonSubmitExtinguisherDialogModifyFlask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_weight="1"
                    android:text="@string/submit" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>