<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <EditText
                android:id="@+id/editTextInsertFloorNameDia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/Name_Floor"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextInsertNumberFloorNameDia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/Number_Floor"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonCancelInsertFloor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/buttonSubmitInsertFloor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_weight="1"
                    android:text="@string/submit" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>