<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="flaskViewModel"
            type="org.ieselcaminas.valentin.managesextinguisher.flask.flaskcreator.FlaskCreatorFragmentViewModel" />
    </data>

    <FrameLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TiLayout7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/colorPrimary"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextInsertnFlask"
                        android:layout_width="match_parent"
                        android:inputType="textPersonName"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="4dp"
                        android:textStyle="bold"
                        android:hint="@string/flask_n" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TiLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/colorPrimary"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextInsertFlaskTradeMark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:textStyle="bold"
                        android:layout_marginBottom="4dp"
                        android:hint="@string/flask_trade" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TiLayout8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/colorPrimary"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextInsertEmptyWeight"
                        android:layout_width="match_parent"
                        android:inputType="number"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="4dp"
                        android:textStyle="bold"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="4dp"
                        android:hint="@string/emptyWeight" />
                </com.google.android.material.textfield.TextInputLayout>



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/LabelModelFlask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:text="@string/Model" />

                    <Spinner
                        android:id="@+id/spinnerModelFlask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/LabelContentWeightFlask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:text="@string/contentWeight" />

                    <Spinner
                        android:id="@+id/spinnerContentWeightFlask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:text="@string/grams"/>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TiLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/colorPrimary"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextSituationFlask"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="16dp"
                        android:textStyle="bold"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:inputType="text"
                        android:ems="10"
                        android:hint="@string/flask_sit" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TiLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ext_description"
                    app:boxStrokeColor="@color/colorPrimary"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textAreaDescriptionLocationFlask"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="top|left"
                        android:textStyle="bold"
                        android:inputType="textMultiLine"
                        android:overScrollMode="always"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:lines="6"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:scrollHorizontally="false"/>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp">

                    <Button
                        android:id="@+id/buttonFactoryDateFlask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginRight="20dp"
                        android:hint="@string/FactoryDate"/>

                    <TextView
                        android:id="@+id/LabelFactoryDate"
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:hint="@string/exeDate" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp">

                    <Button
                        android:id="@+id/buttonDateLastRevisionFlask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"

                        android:layout_marginRight="20dp"
                        android:hint="@string/LastRevision"/>

                    <TextView
                        android:id="@+id/LabelDateLastRevision"
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:hint="@string/exeDate" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonCancelInsertFlask"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:layout_weight="1"
                        android:text="@string/cancel" />

                    <Button
                        android:id="@+id/buttonSubmitExtinguisherInsertFlask"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:layout_weight="1"
                        android:text="@string/submit" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>